solucionado lo del stock